# mini-view-clock

./: .gitignore
.circleci/: config.yml
MiniApp/: .gitignore  build.gradle
MiniApp/app/: build.gradle
MiniApp/app/src/main/: AndroidManifest.xml
MiniApp/app/src/main/java/com/example/myminiview/: MainActivity.kt
MiniApp/app/src/main/res/layout/: activity_main.xml
MiniApp/app/src/test/java/com/example/myminiview/: ExampleUnitTest.kt
MyMiniView/: settings.gradle
MyMiniView/app/: build.gradle
MyMiniView/app/src/androidTest/java/com/example/myminiview/: ExampleInstrumentedTest.kt
MyMiniView/app/src/main/java/com/example/myminiview/: MainActivity.kt
MyMiniView/app/src/main/res/values/: strings.xml
MyMiniView/gradle/wrapper/: gradle-wrapper.properties
deploy/: server.sh  web.sh
mini-view-server/: .env  .gitignore  Cargo.toml  sample.txt
mini-view-server/examples/: base64.rs  hashmap.rs
mini-view-server/migrations/2022-09-19-023741_create_sessions/: up.sql
mini-view-server/scripts/: dev.sh
mini-view-server/src/: lib.rs  main.rs  schema.rs
mini-view-server/src/application/: command.rs  debug.rs  get_note.rs  mod.rs  server.rs  session.rs  test_ws.rs
mini-view-server/src/domain/: command.rs  mod.rs  my_app_error.rs  note.rs  notion.rs  session.rs  zen_quote.rs
mini-view-server/src/infrastructure/: actix_facade.rs  auth_repo.rs  command_server.rs  mod.rs  note_repo.rs  reqwest_facade.rs  session.rs  session_repo.rs  session_ws.rs  sqlite.rs
mini-view-web/: .env.development  .env.production  index.html  package.json
mini-view-web/.firebase/: hosting.ZGlzdA.cache
mini-view-web/src/: About.svelte  App.svelte  Clock.svelte  ClockView.svelte  NoteView.svelte  store.ts  types.ts
mini-view-web/src/assets/: style.css
server/: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
server/config/: dev.toml
server/migrations/2023-01-23-104221_create_plex_hook_token/: up.sql
server/src/: cli.ts  db.ts  index.ts  lib.rs  schema.rs  state.ts
server/src/application/: command.rs  crypto_price.rs  get_note.rs  mod.rs  plex_webhook.rs
server/src/domain/: command.rs  mod.rs  my_base64.rs  note.rs  note_header.rs  plex_hook_token.rs  plex_webhook_event.rs  zen_quote.rs
server/src/infrastructure/: auth_repo.rs  command_server.rs  mod.rs  note_repo.rs  plex_repo.rs  session.rs  sqlite_facade.rs  telegram_repo.rs
simple/: index.js  package.json
web/: .env.development  .env.production  .gitignore  .prettierrc  firebase.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: About.svelte  App.svelte  Calendar.svelte  Clock.svelte  ClockView.svelte  CoinChart.svelte  CoinGrid.svelte  HandGesture.svelte  HandGestureAA.svelte  MenuIcon.svelte  NoteView.svelte  Pomodoro.svelte  SyncJoin.svelte  helpers.ts  main.css  main.ts  store.ts  types.ts
web/src/assets/: style.css
web/src/sync/: store.ts  syncClient.ts  types.ts
