[package]
authors = ["Chop Tr (chop@chop.dev)"]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix = "0.13"
actix-web = { version = "4" }
actix-web-actors = { version = "4.1.0" }
actix-cors = "0.6.1"
rand = "0.8"
env_logger = "0.9.0"
derive_more = "0.99.17"
reqwest = { version = "0.11.0", features = ["json"] }
tracing = "0.1"
chrono = { version = "0.4" }
org = "0.3.1"
lazy_static = "1.4.0"
regex = "1.6.0"
hmac = "0.12.1"
hex = "0.4.3"
sha2 = "0.10.6"
tokio = { version = "1.21.1", features = ["full"] }

[[bin]]
name = "mini-view-cli"
path = "src/bin/cli/main.rs"

[[bin]]
name = "mini-view-server"
path = "src/bin/server/main.rs"
