[package]
authors = ["Chop Tr (chop@chop.dev)"]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
env_logger = "0.10.1"
reqwest = { version = "0.11.0", features = ["json"] }
tracing = "0.1"
chrono = { version = "0.4" }
config = "0.13.4"
tokio = { version = "1.33.0", features = ["full"] }
axum = "0.6.20"
